k8s/employee-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
        - name: employee-service
          image: <ECR_REPO_URI>/employee-service:latest
          ports:
            - containerPort: 80  # Adjust this to your application's port
