k8s/organization-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: organization-service
  template:
    metadata:
      labels:
        app: organization-service
    spec:
      containers:
        - name: department-service
          image: 576694912472.dkr.ecr.ap-southeast-1.amazonaws.com/organization-service:latest
          ports:
            - containerPort: 80  # Adjust this to your application's port
