k8s/department-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: department-ingress
  annotations:
    kubernetes.io/ingress.class: alb  # Use the correct Ingress controller class name (e.g., alb)
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: department-service
                port:
                  number: 8080  # Port your service is listening on
